--- a/directory.html
+++ b/directory.html
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- page title -->
-  <title> Eagelowl, Academy of the Gifted and Talented </title>
+  <title> Eagleowl, Academy of the Gifted and Talented- Teacher Directory</title>
 
   <!-- styles -->
-  <link rel="stylesheet" href="css/odin-0.9.5.css">
+  <link rel="stylesheet" href="css/odin-0.10.3.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lancelot">
 </head>
 
-<body class="show-gridlines">
+<body>
   <!-- start making your grid here -->
 
 <header>
@@ -35,10 +35,10 @@
 
 <div class="hide-md-up">
     <ul>
-      <li> <a href="#"> About </a> </li>
+      <li> <a href="about.html"> About </a> </li>
       <li> <a href="#"> Directory </a> </li>
-      <li> <a href="#"> Calendar </a> </li>
-      <li> <a href="#"> Talents </a> </li>
+      <li> <a href="calendar.html"> Calendar </a> </li>
+      <li> <a href="talents.html"> Talents </a> </li>
       <li> <a href="#"> Library </a> </li>
       <li> <a href="#"> Athletics </a> </li>
     </ul>
@@ -46,10 +46,10 @@
 </nav>
 
   <div class="row hide-sm-down">
-<div class="col-sm-2"> <a href="#"> About </a> </div>
+<div class="col-sm-2"> <a href="about.html"> About </a> </div>
 <div class="col-sm-2"> <a href="#"> Directory </a> </div>
-<div class="col-sm-2"> <a href="#"> Calendar </a> </div>
-<div class="col-sm-2"> <a href="#"> Talents </a> </div>
+<div class="col-sm-2"> <a href="calendar.html"> Calendar </a> </div>
+<div class="col-sm-2"> <a href="talents.html"> Talents </a> </div>
 <div class="col-sm-2"> <a href="#"> Library </a> </div>
 <div class="col-sm-2"> <a href="#"> Athletics </a> </div>
 
@@ -200,21 +200,39 @@
   </table>
 </main>
 
-  <div class="row">
-  <footer>
-    <ul>
-      <li><a href="#"> Location </a></li>
-      <li><a href="#"> Contact Info </a></li>
-    </ul>
-    &copy;Cheyenne and Destiny
-  </footer>
 
+<div class="row">
+<footer>
+
+  <div class="row">
+    <div class="col-sm-6">
+  <ul>
+    <li class="info"> <a href="about.html"> Location </a></li>
+    <p class="location"> <a href="#"> London, UK </a> </p>
+  </div>
+</ul>
+
+<div class="col-sm-6 center-vertical center-horizontal">
+  <ul>
+    <li class="info"> <a href="about.html" > Contact Info </a></li>
+    <p class="number"> <a href="#"> 555-555-5554 </p>
+
+  </ul>
+</div>
+</div>
+
+  &copy;Cheyenne and Destiny 2017
+</div>
+</footer>
+</div>
 
 
     <!-- include any javascript below this line -->
-  </body>
+
   <script src="https://code.jquery.com/jquery-2.2.4.js"> </script>
   <script src="js/jquery-2.1.4.min.js"> </script>
   <script src="js/odin-0.7.1.js"> </script>
   <script src="js/owl.carousel.min.js"> </script>
+</script>
+</body>
   </html>
