--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title> Eagelowl, Academy of the Gifted and Talented </title>
 
   <!-- styles -->
-  <link rel="stylesheet" href="css/odin-0.9.5.css">
+  <link rel="stylesheet" href="css/odin-0.10.3.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -35,10 +35,10 @@
 
 <div class="hide-md-up">
     <ul>
-      <li> <a href="#"> About </a> </li>
+      <li> <a href="about.html"> About </a> </li>
       <li> <a href="directory.html"> Directory </a> </li>
-      <li> <a href="#"> Calendar </a> </li>
-      <li> <a href="#"> Talents </a> </li>
+      <li> <a href="calendar.html"> Calendar </a> </li>
+      <li> <a href="talents.html"> Talents </a> </li>
       <li> <a href="#"> Library </a> </li>
       <li> <a href="#"> Athletics </a> </li>
     </ul>
@@ -51,39 +51,45 @@
 <main>
 
   <div class="row hide-sm-down">
-<div class="col-sm-2"> <a href="#"> About </a> </div>
-<div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
-<div class="col-sm-2"> <a href="#"> Calendar </a> </div>
-<div class="col-sm-2"> <a href="#"> Talents </a> </div>
-<div class="col-sm-2"> <a href="#"> Library </a> </div>
-<div class="col-sm-2"> <a href="#"> Athletics </a> </div>
+    <div class="col-sm-2"> <a href="about.html"> About </a> </div>
+    <div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
+    <div class="col-sm-2"> <a href="calendar.html"> Calendar </a> </div>
+    <div class="col-sm-2"> <a href="talents.html"> Talents </a> </div>
+    <div class="col-sm-2"> <a href="#"> Library </a> </div>
+    <div class="col-sm-2"> <a href="#"> Athletics </a> </div>
 </div>
 
 
 <div class="row hide-md-down">
   <div class="col-sm-6 container-md"> </div>
   <div class="owl-carousel owl-theme">
-    <div class="item"> <img src="img/school.jpg"> </div>
-    <div class="item"> <img src="img/charles_xavier.jpg"> </div>
-    <div class="item"> <img src="img/classroom.jpg"> </div>
-    <div class="item"> <img src="img/challenge.jpg"> </div>
-    <div class="item"> <img src="img/student_life.jpg"> </div>
-    <div class="item"> <img src="img/sports.jpg"> </div>
+    <div class="item"> <img src="img/school.jpg" alt="School"> </div>
+    <div class="item"> <img src="img/charles_xavier.jpg" alt="Charles Xavier"> </div>
+    <div class="item"> <img src="img/classroom.jpg" alt="Classroom"> </div>
+    <div class="item"> <img src="img/challenge.jpg" alt="Challenge"> </div>
+    <div class="item"> <img src="img/student_life.jpg" alt="Student Life"> </div>
+    <div class="item"> <img src="img/lunchroom.jpg" alt="Lunchroom"> </div>
 </div>
 </div>
+
+
 
 <div class="container-xl">
 <div class="row">
+  <div class="col-md-12 center-vertical center-horizontal"> <h1> Eagleowl News </h1> </div>
+</div>
+
+<div class="row">
+<div class="col-sm-6"> <p> A local hero came out of the crowd today at the Humane Animal Shelter Society of golf, where local resident Eagleowl Students London, UK adopted 30 cats of various breeds and ages during a charity event. Adopting the cats was absolutely free, but taking care of the cats will be a major endeavour. A local bystander claims that London, UK could not decide on which cat to take home, and eventually decided to just take them all. When asked what London, UK planned to do with the feline friends, Eagleowl Students replied "they are going to help me with my rat problem!" </p> </div>
 
 
-  <div class="col-lg-6 col-md-6">
-    <h1> Eagelowl News </h1>
-    <p> A local hero came out of the crowd today at the Humane Animal Shelter Society of golf, where local resident Eagleowl Students Greenville, SC adopted 30 cats of various breeds and ages during a charity event. Adopting the cats was absolutely free, but taking care of the cats will be a major endeavour. A local bystander claims that Greenville, SC could not decide on which cat to take home, and eventually decided to just take them all. When asked what Greenville, SC planned to do with the feline friends, Eagleowl Students replied "they are going to help me with my rat problem!" </p>
-  </div>
-  <div class="col-lg-6 col-md-6"> Our news team followed Greenville, SC to a nearby pet store where Greenville, SC bought "at least one thousand pounds of dry food and five hundred pounds of wet food," said Greenville, SC. Eagleowl Students, who admits to spending most of the day on Facebook, added "I am so happy to have all of these new friends. I've already got all of their names picked out. Teachers in the golf school district are under new pressures this week. Sen. Tom Jones has drafted a bill which proposes to limit school spending on a large scale, denying certain schools crucial funding. </div>
+  <div class="col-lg-6 col-md-6"> <p> Our news team followed London, UK to a nearby pet store where London, UK bought "at least one thousand pounds of dry food and five hundred pounds of wet food," said London, UK. Eagleowl Students, who admits to spending most of the day on Facebook, added "I am so happy to have all of these new friends. I've already got all of their names picked out. Teachers in the golf school district are under new pressures this week. Sen. Tom Jones has drafted a bill which proposes to limit school spending on a large scale, denying certain schools crucial funding. </p> </div>
+</div>
+</div>
+
 
 <div class="row container-lg">
-  <div class="col-sm-4 col-sm-1">
+  <div class="col-sm-4">
     <h2> Student Courses </h2>
     <p> Our students here at Eagleowl, Academy of the Gifted and Talented work extremely hard and they put in lots of time and effort for their placement test. The placement test is designed to help us see where our students truly belong and allows them to see maybe a side of them they didn't know was there. Some of these courses are optional, some are mandatory for every student and some are taken due to their placement scores. Down below are some of the mandatory courses students have to take to further their stay at our academy.
       <ul>
@@ -94,22 +100,26 @@
       </p>
     </div>
 
-  <div class="col-sm-4 col-sm-1">
+  <div class="col-sm-4">
     <h2> Our Belief </h2>
     <p> Our objective is to continue to beat the mean of the nation, set high standards for our children and allow them to be fully successful in their everyday lives. Their improvement and change to society will be highly appreciated by the civilians around the globe. These kids here are not monsters, they are not manipulative. Students here at Eagleowl, Academy of the Gifted and Talented are inspiring leaders who will drive america in the right direction. </p>
     </div>
 
-  <div class="col-sm-4 col-sm-1">
+  <div class="col-sm-4">
     <h2> Safety and Regulations </h2>
     <p> We here at Eagleowl expect everyone to follow the rules and stay safe. There are some safety rules we have enforced here at our school. No using your powers for horse play and or bullying. We do not tolerate bullying here and anyone who is caught in the act of bullying in any way shape or form will face consequences. During practices and test trials of gifts and talents, there should only be one student and the instructor on the pad. This prevents students not practicing from getting injured. We thank you for taking the time to read over these safety rules and regulations, by doing that we know that you are willing to allow us to keep your child safe here at school. </p>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-sm-12 col-sm-1 container-xl">
+  <div class="col-sm-12 container-xl">
     <h2> Sign up for our Newsletter! </h2>
     <p> Staying updated with our school events and your child due dates is a great start to being involved. Our Eagleowl Newsletter, offers many different sections of information for you and your child to share. Things like student appreciation day, new employees, opportunities for new talent courses, etc. Don't be a party pooper, join the club and let your wings soar with great information and updates just with the click of a button! </p>
+</div>
+</div>
 
+<div class="row">
+  <div class="col-sm-7 container-xl">
     <form action="thank_you.html" method="post">
       <fieldset>
         <label for="name"> Full Name </label> <br>
@@ -138,23 +148,28 @@
   <div class="row">
     <div class="col-sm-6">
   <ul>
-    <li class="info"> <a href="#"> Location </a></li>
+    <li class="info"> <a href="about.html"> Location </a></li>
+    <p class="location"> <a href="#"> London, UK </a> </p>
   </div>
 </ul>
 
-<div class="col-sm-6">
+<div class="col-md-6 center-vertical center-horizontal col-sm-1 center-horizontal">
   <ul>
-    <li class="info"> <a href="#" > Contact Info </a></li>
+    <li class="info"> <a href="about.html" > Contact Info </a></li>
+    <p class="number"> <a href="#"> 555-555-5554 </p>
+
   </ul>
 </div>
 </div>
-  &copy;Cheyenne and Destiny
+
+  &copy;Cheyenne and Destiny 2017
+</div>
 </footer>
 </div>
 
 
   <!-- include any javascript below this line -->
-</body>
+
 <script src="https://code.jquery.com/jquery-2.2.4.js"> </script>
 <script src="js/jquery-2.1.4.min.js"> </script>
 <script src="js/odin-0.7.1.js"> </script>
@@ -175,4 +190,5 @@ $(document).ready(function(){
   })
 })
 </script>
+</body>
 </html>
