--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- page title -->
-  <title> Eagleowl, Academy of the Gifted and Talented - Submitti </title>
+  <title> Eagleowl, Academy of the Gifted and Talented - About </title>
 
   <!-- styles -->
   <link rel="stylesheet" href="css/odin-0.10.3.css">
@@ -37,8 +37,8 @@
     <ul>
       <li> <a href="#"> About </a> </li>
       <li> <a href="directory.html"> Directory </a> </li>
-      <li> <a href="#"> Calendar </a> </li>
-      <li> <a href="#"> Talents </a> </li>
+      <li> <a href="calendar.html"> Calendar </a> </li>
+      <li> <a href="talents.html"> Talents </a> </li>
       <li> <a href="#"> Library </a> </li>
       <li> <a href="#"> Athletics </a> </li>
     </ul>
@@ -47,11 +47,10 @@
 
 </header>
 
-
 <main>
 
   <div class="row hide-sm-down">
-<div class="col-sm-2"> <a href="about.html"> About </a> </div>
+<div class="col-sm-2"> <a href="#"> About </a> </div>
 <div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
 <div class="col-sm-2"> <a href="calendar.html"> Calendar </a> </div>
 <div class="col-sm-2"> <a href="talents.html"> Talents </a> </div>
@@ -59,37 +58,45 @@
 <div class="col-sm-2"> <a href="#"> Athletics </a> </div>
 </div>
 
-<h1> Thank You! </h1>
-<p> You will get the latest news of Eagleowl by phone, letter or email. </p>
-
-<a href="index.html"> <p> Return Home </p> </a>
 </main>
 
-<div id="footer">
+<div class="row">
+  <div class="col-sm-12">
+    <div class="container-lg">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d218469.546508291!2d-0.20785424555083357!3d51.485707460962175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2sus!4v1488810307377" width="1254" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+</div>
+</div>
+
+
+
+
+
+<div class="row">
+<footer>
+
   <div class="row">
-  <footer>
+    <div class="col-sm-6">
+  <ul>
+    <li class="info"> <a href="about.html"> Location </a></li>
+    <p class="location"> <a href="#"> London, UK </a> </p>
+  </div>
+</ul>
 
-    <div class="row">
-      <div class="col-sm-6">
-    <ul>
-      <li class="info"> <a href="about.html"> Location </a></li>
-      <p class="location"> <a href="#"> London, UK </a> </p>
-    </div>
+<div class="col-sm-6 center-vertical center-horizontal">
+  <ul>
+    <li class="info"> <a href="about.html" > Contact Info </a></li>
+    <p class="number"> <a href="#"> 555-555-5554 </p>
+
   </ul>
+</div>
+</div>
 
-  <div class="col-sm-6 center-vertical center-horizontal">
-    <ul>
-      <li class="info"> <a href="about.html" > Contact Info </a></li>
-      <p class="number"> <a href="#"> 555-555-5554 </p>
+  &copy;Cheyenne and Destiny 2017
+</div>
+</footer>
+</div>
 
-    </ul>
-  </div>
-  </div>
-
-    &copy;Cheyenne and Destiny 2017
-  </div>
-  </footer>
-  </div>
 
 
   <!-- include any javascript below this line -->
@@ -98,5 +105,4 @@
 <script src="js/jquery-2.1.4.min.js"> </script>
 <script src="js/odin-0.7.1.js"> </script>
 <script src="js/owl.carousel.min.js"> </script>
-
 </html>
