--- a/talents.html
+++ b/talents.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- page title -->
-  <title> Eagleowl, Academy of the Gifted and Talented - Submitti </title>
+  <title> Eagleowl, Academy of the Gifted and Talented - Talents </title>
 
   <!-- styles -->
   <link rel="stylesheet" href="css/odin-0.10.3.css">
@@ -30,14 +30,14 @@
 
   <div class="navbar-menu">
     <div class="hide-md-up">
-    <a class="slideout-brand hide-md-up"> <a href="index.html"> Eagleowl Academy of the Gifted and Talented </a>
+    <a class="slideout-brand hide-md-up"> Eagleowl Academy of the Gifted and Talented </a>
     <button class="menu-dismiss" aria-label="Dismiss navigation"> &times; </button>
 
 <div class="hide-md-up">
     <ul>
-      <li> <a href="#"> About </a> </li>
+      <li> <a href="about.html"> About </a> </li>
       <li> <a href="directory.html"> Directory </a> </li>
-      <li> <a href="#"> Calendar </a> </li>
+      <li> <a href="calendar.html"> Calendar </a> </li>
       <li> <a href="#"> Talents </a> </li>
       <li> <a href="#"> Library </a> </li>
       <li> <a href="#"> Athletics </a> </li>
@@ -47,23 +47,25 @@
 
 </header>
 
-
 <main>
 
   <div class="row hide-sm-down">
 <div class="col-sm-2"> <a href="about.html"> About </a> </div>
 <div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
 <div class="col-sm-2"> <a href="calendar.html"> Calendar </a> </div>
-<div class="col-sm-2"> <a href="talents.html"> Talents </a> </div>
+<div class="col-sm-2"> <a href="#"> Talents </a> </div>
 <div class="col-sm-2"> <a href="#"> Library </a> </div>
 <div class="col-sm-2"> <a href="#"> Athletics </a> </div>
 </div>
 
-<h1> Thank You! </h1>
-<p> You will get the latest news of Eagleowl by phone, letter or email. </p>
-
-<a href="index.html"> <p> Return Home </p> </a>
 </main>
+
+
+
+
+
+
+
 
 <div id="footer">
   <div class="row">
@@ -85,18 +87,19 @@
     </ul>
   </div>
   </div>
-
     &copy;Cheyenne and Destiny 2017
   </div>
   </footer>
   </div>
 
 
+
   <!-- include any javascript below this line -->
-</body>
+
 <script src="https://code.jquery.com/jquery-2.2.4.js"> </script>
 <script src="js/jquery-2.1.4.min.js"> </script>
 <script src="js/odin-0.7.1.js"> </script>
 <script src="js/owl.carousel.min.js"> </script>
-
+</script>
+</body>
 </html>
