--- a/directory.html
+++ b/directory.html
@@ -197,6 +197,15 @@
                                 </td>
                               </tr>
 
+                              <tr>
+                                <td aria-label="Position"> Counselor </td>
+                                <td aria-label="Name"> Dr. Strange </td>
+                                <td aria-label="Phone"> 234-567-8910 </td>
+                                <td aria-label="Email">
+                                  <adress> <a href="mailto:its_Strange@mysticalcreatures.com"> its_Strange@mysticalcreatures.com </a> <br>
+                                  </td>
+                                </tr>
+
   </table>
 </main>
 
