--- a/thank_you.html
+++ b/thank_you.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- page title -->
-  <title> Eagleowl, Academy of the Gifted and Talented - Submitti </title>
+  <title> Eagleowl, Academy of the Gifted and Talented - Submit </title>
 
   <!-- styles -->
   <link rel="stylesheet" href="css/odin-0.10.3.css">
