--- a/directory.html
+++ b/directory.html
@@ -82,7 +82,7 @@
 
       <tr>
         <td aria-label="Position"> Teacher </td>
-        <td aria-label="Name"> Scott Summers </td>
+        <td aria-label="Name"><a href="scott_summers.html"> Scott Summers </a> </td>
         <td aria-label="Phone"> 234-852-3652 </td>
         <td aria-label="Email">
           <address> <a href="mailto:cyclops_itslit@mysticalcreatures.com"> cyclops_itslit@mysticalcreatures.com </a> <br>
@@ -91,7 +91,7 @@
 
         <tr>
           <td aria-label="Position"> Teacher </td>
-          <td aria-label="Name"> Professor Severus Snape </td>
+          <td aria-label="Name"> <a href="severus_snape.html"> Professor Severus Snape </a> </td>
           <td aria-label="Phone"> 234-514-5987 </td>
           <td  aria-label="Email">
             <address> <a href="mailto:sarcasm_iskey@mysticalcreatures.com"> sarcasm_iskey@mysticalcreatures.com </a> <br>
