--- a/scott_summers.html
+++ b/scott_summers.html
@@ -5,17 +5,17 @@
   <!--metadata-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> Scott Summers </title>
 
-  <!--page title-->
-  <Title> Professor Severus Snape </title>
-
-  <!--styles-->
   <link rel="stylesheet" href="css/odin-0.10.3.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niconne">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Farsan">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lancelot">
 </head>
+
+<body>
+  <!-- start making your grid here -->
 
 <header>
   <nav class="navbar navbar-slideout-md">
@@ -26,13 +26,12 @@
     <div class="hide-md-up">
     <a class="slideout-brand hide-md-up"> Eagleowl Academy of the Gifted and Talented </a>
     <button class="menu-dismiss" aria-label="Dismiss navigation"> &times; </button>
-  </div>
 
 <div class="hide-md-up">
     <ul>
       <li> <a href="about.html"> About </a> </li>
       <li> <a href="directory.html"> Directory </a> </li>
-      <li> <a href="calendar.html"> Calendar </a> </li>
+      <li> <a href="#"> Calendar </a> </li>
       <li> <a href="talents.html"> Talents </a> </li>
       <li> <a href="#"> Library </a> </li>
       <li> <a href="#"> Athletics </a> </li>
@@ -42,55 +41,48 @@
 
 
   <div class="row hide-sm-down">
-    <div class="col-sm-2"> <a href="about.html"> About </a> </div>
-    <div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
-    <div class="col-sm-2"> <a href="calendar.html"> Calendar </a> </div>
-    <div class="col-sm-2"> <a href="talents.html"> Talents </a> </div>
-    <div class="col-sm-2"> <a href="#"> Library </a> </div>
-    <div class="col-sm-2"> <a href="#"> Athletics </a> </div>
+<div class="col-sm-2"> <a href="about.html"> About </a> </div>
+<div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
+<div class="col-sm-2"> <a href="#"> Calendar </a> </div>
+<div class="col-sm-2"> <a href="talents.html"> Talents </a> </div>
+<div class="col-sm-2"> <a href="#"> Library </a> </div>
+<div class="col-sm-2"> <a href="#"> Athletics </a> </div>
 </div>
 </header>
-
-<main>
-
-<!--gridlines-->
 <body>
 
 <div class="row">
 <div class="container-xl">
   <div class="row">
-    <div class="col-sm-12 center-horizontal center-vertical"> <h2> Professor Severus Snape </h2> </div>
+    <div class="col-sm-4"></div>
+    <div class="col-sm-8"> <h2> Scott Summers </h2> </div>
 </div>
 
 <div class="row">
-    <div class="col-sm-4"> </div>
+    <div class="col-sm-4"></div>
     <div class="col-sm-8"> </div>
 </div>
 
-  <div class="row">
-    <div class="col-sm-4">  </div>
-    <div class="col-sm-5"> <img src="img/severus_snape.jpg"> </div>
-    <div class="col-sm-3"> </div>
-  </div>
 
   <div class= "row">
     <div class="col-sm-4"> <h2> About me </h2> </div>
-    <div class="col-sm-8"> My name is Professor Snape. I specialize in potions and alchemy for healing and the whatnot. </div>
+    <div class="col-sm-5"> <img src="img/scott_summers.jpg" alt="scottsummers"></div>
+    <div class="col-sm-3"> My name is Scott Summers but, my talent name is Cyclops. I am a member of a subspecies known as mutants, a person born with superhuman abilities, like most of the children here at our academy. I am very experienced when it comes to dealing with kids and people with superhuman abilities our as we like to call them... Talents and Gifts.</div>
   </div>
 
   <div class="row">
     <div class="col-sm-4"> <h2> Information </h2> </div>
-    <div class="col-sm-8"> I am a teacher in the Wizardy Department in Eagleowl Academy. My classroom is the only lab for the Wizard's Department, so do not be surprised if you finish homework and go over to the Super Hero Campus. Which won't be advisable since you will fail to find the ingredents you need and accidently become a mutant. </div>
+    <div class="col-sm-8">I am a teacher here at the academy. I am in charge of the main superhuman abilities within the children and monitoring the children when they take the placement test to get a glimpse of what I am getting myself into. </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4"> <h2> Courses </h2> </div>
-    <div class="col-sm-8"> I teach students potions and spells. Like any other teacher of wizardy will say, potions are very important and is strongly a part of culture for Wizards. I will teach students what ingredients do what and what not to mix together to create a mess. </div>
+    <div class="col-sm-8">I teach a few courses that allow talent management and discovering the students gifts and talents. These courses help the children understand when, where and how to use your talents and gifts. They also help the students find themselves within that gift they have and realy lets them get a feel for their personalities.</div>
   </div>
 
   <div class="row">
     <div class="col-sm-4"> <h2> Extra </h2> </div>
-    <div class="col-sm-8"> I do not appreciate overachievers. They are a pain in my side. Do not try to create the most complex potion just to impress me. Because you will not. Do not use potions on each other, a simple misjudgment on the amount of ingredients can result in hazardous conditions for everyone. </div>
+    <div class="col-sm-8">My classroom rules are simple: Do Not Use Your Powers Out Of Term! This means unless asked or the assignment requires you to, please do not use your powers because they can be very dangerous to the not only the people around you but also yourself if you do not know what you are doing.</div>
   </div>
 
   <div class="row">
@@ -100,7 +92,7 @@
 
   <div class="row">
     <div class="col-sm-4"></div>
-    <div class="col-sm-8"></div>
+    <div class="col-sm-8"> </div>
   </div>
 
   <div class="row">
@@ -109,6 +101,9 @@
   </div>
 </div>
 </div>
+
+
+  <div class="row">
   <footer>
 
     <div class="row">
@@ -129,9 +124,9 @@
   </div>
 
     &copy;Cheyenne and Destiny 2017
+  </div>
   </footer>
   </div>
-
 
 </body>
 </html>
