--- a/calendar.html
+++ b/calendar.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lancelot">
 </head>
 
-<body>
+<body3>
   <!-- start making your grid here -->
 
 <header>
@@ -45,9 +45,7 @@
   </div>
 </nav>
 
-</header>
 
-<main>
   <div class="row hide-sm-down">
 <div class="col-sm-2"> <a href="about.html"> About </a> </div>
 <div class="col-sm-2"> <a href="directory.html"> Directory </a> </div>
@@ -56,15 +54,14 @@
 <div class="col-sm-2"> <a href="#"> Library </a> </div>
 <div class="col-sm-2"> <a href="#"> Athletics </a> </div>
 </div>
-
-</main>
-
+</header>
 
 
 
 
 
 
+<main>
 
 <div class="row">
 <footer>
